--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,2 +1,17 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#main {
+  padding-top:70px;
+}
+
+footer {
+  border-top:1px solid #eee;
+  padding:20px;
+  margin:20px;
+  text-align:center;
+}
+
+footer i {
+  color:red;
+}
