--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -18,8 +18,7 @@
   <%= yield %>
 </div>
 <footer class="container">
-Made with <i class="fa fa-heart"></i> by your pals
-<a href="https://www.getg5.com">@G5</a>.
+Made with <i class="fa fa-heart"></i> by your pals <a href="https://www.getg5.com">@G5</a>.
 </footer>
 </body>
 </html>
