--- a/app/views/dashboard/index.erb
+++ b/app/views/dashboard/index.erb
@@ -41,20 +41,22 @@
   <div class="col-md-7">
     <h2>Charts</h2>
     <p>The latest statistics about how the lead sources are performing.</p>
-
     <div class="row">
       <div class="col-md-6">
         <h3>Calls by lead source</h3>
         <p>The number of incoming calls each lead source has received.</p>
         <canvas id="leads-by-source"></canvas>
       </div>
-
       <div class="col-md-6">
         <h3>Calls by city</h3>
         <p>The number of calls from different cities, based on Twilio call data</p>
         <canvas id="leads-by-city"></canvas>
       </div>
     </div>
+  </div>
+  <div class="col-md-7">
+    <h2>Leads</h2>
+    <%= render "leads" %>
   </div>
 </div>
 <%= javascript_include_tag "call_tracking" %>
