--- a/app/views/dashboard/index.erb
+++ b/app/views/dashboard/index.erb
@@ -1,5 +1,5 @@
-<h1>Call Tracking with Twilio</h1>
-<p>This app shows you how to implement a sample call tracking application with Twilio. Add a new phone number below to get started.</p>
+<h1>G5 Call Analytics</h1>
+<p>Real time call tracking and Analytics.</p>
 <div class="row">
   <div class="col-md-5">
     <h2>Add a new number</h2>
@@ -7,7 +7,9 @@
     <form class="form-inline" action="/available_phone_numbers" method="get">
       <div class="form-group">
         <label class="sr-only control-label" for="area-code">Area code</label>
-        <input id="area-code" name="area-code" type="text" class="form-control" value="415" maxlength="3" />
+        <input id="area-code" name="area-code" type="text" class="form-control" maxlength="3" />
+        <label class="sr-only control-label" for="zip-code">Zip Code</label>
+        <input id="zip-code" name="zip-code" type="text" class="form-control" maxlength="5" />
       </div>
       <button type="submit" class="btn btn-primary">Search</button>
     </form>
@@ -39,8 +41,6 @@
     <% end %>
   </div>
   <div class="col-md-7">
-    <h2>Charts</h2>
-    <p>The latest statistics about how the lead sources are performing.</p>
     <div class="row">
       <div class="col-md-6">
         <h3>Calls by lead source</h3>
