--- a/app/views/dashboard/_leads.erb
+++ b/app/views/dashboard/_leads.erb
@@ -1,6 +1,7 @@
 <table class="table table-striped">
   <thead>
   <tr>
+    <th>When</th>
     <th>Phone number</th>
     <th>City</th>
     <th>State</th>
@@ -10,6 +11,8 @@
   <tbody>
   <% @leads.each do |lead| %>
       <tr>
+        <td><%= distance_of_time_in_words(Time.now - lead.created_at) %> ago</td>
+        <td><%= lead.lead_source.name %></td>
         <td><%= lead.phone_number %></td>
         <td><%= lead.city %></td>
         <td><%= lead.state %></td>
