refactor fatty controller

--- a/app/views/dashboard/index.erb
+++ b/app/views/dashboard/index.erb
@@ -25,6 +25,7 @@
     <% else %>
       <p><b>Add a new number to populate this list</b></p>
     <% end %>
+    <input id="btn-test-me" class='btn btn-default btn-xs' value="Test Me" />
   </div>
   <div class="col-md-7">
     <div class="row">
